crates/oxc_css_parser/tests/error/scss/at-rule/forward/show-empty-variable.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `$var`, but found `<unknown>`
  ┌─ show-empty-variable.scss:1:19
  │
1 │ @forward "a" show $;
  │                   ^
